--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,8 @@
     <title>PTG Group</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">
+        <h1>it should work now</h1>
+    </div>
 </body>
 </html>
