--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,14 @@
 </head>
 <body>
     <div id="app">
-        <h1>it should work now</h1>
+        <h1>Neeko Blomgren Does this work???</h1>
+
+        <ul>
+            <li>Stuff</li>
+            <li>Things</li>
+            <a href="http://google.com" ></a><li>Wow</li> </a>
+            
+        </ul>
     </div>
 </body>
 </html>
