--- a/app/index.html
+++ b/app/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <div id="app"></div>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+    </ul>
 </body>
 </html>
