add merge conflict change

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <div id="app">
-        <h1>it should work now</h1>
+        <h1>erics version</h1>
+        <h2>blah blah blah</h2>
     </div>
 </body>
 </html>
